--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/Fishbowler/cypress-todo#readme",
   "devDependencies": {
+    "@simonsmith/cypress-image-snapshot": "^9.0.1",
     "cypress": "^13.6.2"
   }
 }
