Mandate Chrome for CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           install: false
+          browser: chrome
 
       - name: Upload test screenshots
         uses: actions/upload-artifact@v3
